feat: controller, service, Map 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend-producer
+
+server.port=8080
+
+logging.level.root=INFO
+logging.level.com.chaeiou.backend_producer=DEBUG
+logging.level.org.springframework.web=INFO
